err/pyflies.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Arpeggio-1.7.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/arpeggio'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyFlies-0.3.egg-info'...
Listing './lib/python3.5/site-packages/pyflies'...
Listing './lib/python3.5/site-packages/pyflies/generators'...
Listing './lib/python3.5/site-packages/pyflies/generators/expyriment'...
Listing './lib/python3.5/site-packages/pyflies/generators/expyriment/templates'...
Listing './lib/python3.5/site-packages/pyflies/generators/jspsych'...
Listing './lib/python3.5/site-packages/pyflies/generators/jspsych/templates'...
Listing './lib/python3.5/site-packages/pyflies/generators/jspsych/templates/css'...
Listing './lib/python3.5/site-packages/pyflies/generators/jspsych/templates/scripts'...
Listing './lib/python3.5/site-packages/pyflies/generators/jspsych/templates/scripts/plugins'...
Listing './lib/python3.5/site-packages/pyflies/generators/psychopy'...
Listing './lib/python3.5/site-packages/pyflies/generators/psychopy/templates'...
Listing './lib/python3.5/site-packages/pyflies/gui'...
Listing './lib/python3.5/site-packages/pyflies/gui/ui'...
Listing './lib/python3.5/site-packages/pyflies/gui/ui/icons'...
Listing './lib/python3.5/site-packages/pyflies/lang'...
Listing './lib/python3.5/site-packages/pyflies/scripts'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/textX-1.6.1.dist-info'...
Listing './lib/python3.5/site-packages/textx'...
Listing './lib/python3.5/site-packages/textx/commands'...
Listing './share'...
Listing './share/python-wheels'...
